crates/crochet_parser/src/snapshots/crochet_parser__tests__assignments-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"a.b = c;\")"
---
Ok(
    Program {
        body: [
            Expr {
                span: 0..8,
                expr: Expr {
                    span: 0..7,
                    kind: Assign(
                        Assign {
                            left: Expr {
                                span: 0..3,
                                kind: Member(
                                    Member {
                                        obj: Expr {
                                            span: 0..1,
                                            kind: Ident(
                                                Ident {
                                                    span: 0..1,
                                                    name: "a",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        prop: Ident(
                                            Ident {
                                                span: 2..3,
                                                name: "b",
                                            },
                                        ),
                                    },
                                ),
                                inferred_type: None,
                            },
                            right: Expr {
                                span: 6..7,
                                kind: Ident(
                                    Ident {
                                        span: 6..7,
                                        name: "c",
                                    },
                                ),
                                inferred_type: None,
                            },
                            op: Eq,
                        },
                    ),
                    inferred_type: None,
                },
            },
        ],
    },
)
