crates/crochet_parser/src/snapshots/crochet_parser__tests__async_await-4.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = async () => await bar();\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..34,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 10..33,
                        kind: Lambda(
                            Lambda {
                                params: [],
                                body: Expr {
                                    span: 22..33,
                                    kind: Await(
                                        Await {
                                            expr: Expr {
                                                span: 28..33,
                                                kind: App(
                                                    App {
                                                        lam: Expr {
                                                            span: 28..31,
                                                            kind: Ident(
                                                                Ident {
                                                                    span: 28..31,
                                                                    name: "bar",
                                                                },
                                                            ),
                                                            inferred_type: None,
                                                        },
                                                        args: [],
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: true,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
