crates/crochet_parser/src/snapshots/crochet_parser__tests__async_await.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"async () => 10\")"
---
Program {
    body: [
        Expr {
            span: 0..14,
            expr: Lambda(
                Lambda {
                    span: 0..14,
                    params: [],
                    body: Lit(
                        Num(
                            Num {
                                span: 12..14,
                                value: "10",
                            },
                        ),
                    ),
                    is_async: true,
                    return_type: None,
                    type_params: None,
                },
            ),
        },
    ],
}
