crates/crochet_parser/src/snapshots/crochet_parser__tests__declarations-2.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let x = (a, b) => a + b;\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..24,
                pattern: Pattern {
                    span: 4..5,
                    kind: Ident(
                        BindingIdent {
                            name: "x",
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 8..23,
                        kind: Lambda(
                            Lambda {
                                params: [
                                    EFnParam {
                                        pat: Pattern {
                                            span: 9..10,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "a",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                    EFnParam {
                                        pat: Pattern {
                                            span: 12..13,
                                            kind: Ident(
                                                BindingIdent {
                                                    name: "b",
                                                },
                                            ),
                                            inferred_type: None,
                                        },
                                        type_ann: None,
                                        optional: false,
                                        mutable: false,
                                    },
                                ],
                                body: Expr {
                                    span: 18..23,
                                    kind: BinaryExpr(
                                        BinaryExpr {
                                            op: Add,
                                            left: Expr {
                                                span: 18..19,
                                                kind: Ident(
                                                    Ident {
                                                        span: 18..19,
                                                        name: "a",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                            right: Expr {
                                                span: 22..23,
                                                kind: Ident(
                                                    Ident {
                                                        span: 22..23,
                                                        name: "b",
                                                    },
                                                ),
                                                inferred_type: None,
                                            },
                                        },
                                    ),
                                    inferred_type: None,
                                },
                                is_async: false,
                                return_type: None,
                                type_params: None,
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
