crates/crochet_parser/src/snapshots/crochet_parser__tests__declarations-3.snap
---
source: crates/crochet_parser/src/lib.rs
expression: "parse(\"let foo = do {let x = 5; x};\")"
---
Ok(
    Program {
        body: [
            VarDecl {
                span: 0..28,
                pattern: Pattern {
                    span: 4..7,
                    kind: Ident(
                        BindingIdent {
                            name: "foo",
                            mutable: false,
                            span: 4..7,
                        },
                    ),
                    inferred_type: None,
                },
                type_ann: None,
                init: Some(
                    Expr {
                        span: 14..24,
                        kind: Let(
                            Let {
                                pattern: Some(
                                    Pattern {
                                        span: 18..19,
                                        kind: Ident(
                                            BindingIdent {
                                                name: "x",
                                                mutable: false,
                                                span: 18..19,
                                            },
                                        ),
                                        inferred_type: None,
                                    },
                                ),
                                type_ann: None,
                                init: Expr {
                                    span: 22..23,
                                    kind: Lit(
                                        Num(
                                            Num {
                                                span: 22..23,
                                                value: "5",
                                            },
                                        ),
                                    ),
                                    inferred_type: None,
                                },
                                body: Expr {
                                    span: 25..26,
                                    kind: Ident(
                                        Ident {
                                            span: 25..26,
                                            name: "x",
                                        },
                                    ),
                                    inferred_type: None,
                                },
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                declare: false,
            },
        ],
    },
)
